<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Globals -->
    <string name="app_name">Amino</string>
    <string name="language">EN</string>
    <string name="ndc_language">en-US</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="unexpected_error">Unexpected error. Contact the developer</string>
    <string name="check_internet">Error! Check your internet connection</string>
    <string name="verify">Verify</string>
    <string name="error">Error</string>

    <!-- Login -->
    <string name="amino_logo">Amino logo</string>
    <string name="login_to_the_account">Login to the account</string>
    <string name="amino_by_ilyadreamix" translatable="false">Amino by IlyaDreamix</string>
    <string name="version">Version %1$s</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter email</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter password</string>
    <string name="login">Login</string>

    <!-- Debug activity -->
    <string name="debug_title">Debug menu</string>
    <string name="debug_ua" translatable="false">User-Agent</string>
    <string name="debug_device_id">Device ID</string>
    <string name="debug_sid">Session ID</string>
    <string name="debug_secret">Secret</string>
    <string name="debug_user_id">User ID</string>
    <string name="debug_last_login">Last login</string>
    <string name="debug_default">None</string>
    <string name="debug_amino_info">Amino information (long press to copy)</string>
    <string name="debug_device_info">Device information</string>
    <string name="debug_brand">Brand</string>
    <string name="debug_board">Board</string>
    <string name="debug_manufacturer">Manufacturer</string>
    <string name="debug_model">Model</string>
    <string name="debug_product">Product</string>
    <string name="debug_app_info">App information</string>
    <string name="debug_version_text" translatable="false">%1$s (%2$d)</string>
    <string name="debug_is_debug">Debug</string>
    <string name="debug_package">Package</string>
    <string name="debug_version">Version</string>
    <string name="debug_auth_status">Auth status</string>
    <string name="debug_set_auth_status_1">Set auth status 1</string>
    <string name="debug_goto_splash">Go to splash</string>

    <!-- Alert dialog -->
    <string name="ad_warning_title">Warning</string>
    <string name="ad_warning_message">Amino is a registered trademark of Medialab (Narvii).
        All trademarks referenced here are the properties of their respective owners.
        This app is provided \"AS IS\", only for educational purposes, without warranty of any kind.
        Developer is not responsible for any loss or damage from its use, including banned accounts
    </string>
    <string name="ad_warning_debug">You are entering the debug menu now.
        Please do not distribute information from it.
        This menu contains information about your account
    </string>
    <string name="ad_ok" translatable="false">OK</string>
    <string name="ad_cancel">Cancel</string>
    <string name="ad_login_error">Login error</string>
    <string name="ad_request_error">Request error</string>

    <!-- Home activity -->
    <string name="home_profile">Profile</string>
    <string name="home_coms">Communities</string>
    <string name="home_chats">Chats</string>

    <!-- Community fragment -->
    <string name="com_community_icon">Community icon</string>
    <string name="com_my_coms">My communities</string>
    <string name="com_getting_error">Cannot get communities at the moment</string>

    <!-- Profile fragment -->
    <string name="profile_my_profile">My profile</string>
    <string name="profile_icon">Profile icon</string>
    <string name="profile_coins">Amino Coins</string>
    <string name="profile_nickname" translatable="false">Profile nickname</string>
    <string name="profile_amino_id" translatable="false">Profile AminoID</string>
    <string name="profile_coins_default" translatable="false">0</string>

</resources>