<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.LoginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingEnd="24dp"
    android:paddingStart="24dp">

    <!-- Center layout -->
    <LinearLayout
        android:id="@+id/login_center_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX=".75"
            android:scaleY=".75"
            android:src="@drawable/amino_logo"
            app:tint="?colorOnBackground"
            android:contentDescription="@string/amino_logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="@string/login_to_the_account"/>

        <!-- Email text field -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_email_text_layout"
            android:layout_marginTop="16dp"
            style="@style/RoundTextField"
            app:startIconDrawable="@drawable/ic_email"
            android:hint="@string/email"
            app:placeholderText="@string/enter_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_email_text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password text field -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_password_text_layout"
            android:layout_marginTop="13dp"
            style="@style/RoundTextField"
            app:startIconDrawable="@drawable/ic_password"
            android:hint="@string/password"
            app:placeholderText="@string/enter_password"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="?colorOnSurfaceVariant">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password_text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Login button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:cornerRadius="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/login"/>

    </LinearLayout>

    <!-- Bottom layout -->
    <LinearLayout
        android:id="@+id/login_bottom_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:alpha=".75">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amino_by_ilyadreamix"/>

        <TextView
            android:id="@+id/login_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>