<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.DebugActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingEnd="24dp"
    android:paddingStart="24dp"
    android:paddingTop="24dp">

    <!-- Start layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/debug_title"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/debug_amino_info"
            android:layout_marginBottom="8dp"/>

        <!-- Amino info -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false">

            <!-- Field icons and names -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".15"
                android:orientation="vertical"
                android:layout_marginEnd="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/debug_ua"
                    android:textSize="16sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/debug_user_id"
                    android:textSize="16sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/debug_device_id"
                    android:textSize="16sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/debug_sid"
                    android:textSize="16sp" />

            </LinearLayout>

            <!-- Fields -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/debug_ua"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/debug_default"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/debug_user_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/debug_default"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/debug_device_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/debug_default"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/debug_sid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/debug_default"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/debug_device_info"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"/>

        <!-- Device info -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false">

            <!-- Field names -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".20"
                android:orientation="vertical"
                android:layout_marginEnd="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/debug_brand"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/debug_board"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/debug_manufacturer"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/debug_model"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/debug_product"
                    android:textSize="16sp"/>

            </LinearLayout>

            <!-- Fields -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/debug_brand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/debug_default"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/debug_board"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/debug_default"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/debug_manufacturer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/debug_default"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/debug_model"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/debug_default"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/debug_product"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/debug_default"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>