<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.CommunitiesFragment"
    android:layout_marginBottom="90dp">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/communities_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Top bar -->
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/communities_top_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:liftOnScroll="true"
            app:layout_scrollFlags="scroll|snap">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/communities_top_bar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/com_my_coms"/>

        </com.google.android.material.appbar.AppBarLayout>

        <!-- Fake communities list -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/communities_fake_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:listitem="@layout/item_community"
            app:spanCount="3"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager" />

        <!-- Communities list -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/communities_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:listitem="@layout/item_community"
            app:spanCount="3"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            android:visibility="invisible"/>

        <!-- Error -->
        <LinearLayout
            android:id="@+id/communities_loading_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical"
            android:visibility="gone"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="86dp"
                android:layout_height="86dp"
                android:src="@drawable/ic_warning"
                app:tint="?colorOnBackground"
                android:contentDescription="@string/error"
                android:paddingBottom="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:drawablePadding="14dp"
                android:text="@string/com_getting_error"
                android:textSize="18sp" />

        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</FrameLayout>